fixing issues
Removed scrollbar, side borders.
Removed interactive UI on 360screen.php.
Fixed the 360screen.php centering image issue.
Droupdown menu closes when clicked  on the outside.
Added recover image in archivedphoto.php

--- a/360screen.css
+++ b/360screen.css
@@ -1,8 +1,9 @@
-.row img{
-	margin-top: 10px;
-	vertical-align: middle;
-	width:100%;
-	}
+body {
+ margin-top: 0px;
+ margin-right: 0px;
+ margin-bottom: 0px;
+ margin-left: 0px
+}
 
 header{
 	background-color: #990033;
@@ -18,48 +19,12 @@ h1{
     display: inline;
 }
 
-.menuline{
-    width: 4vw;
-    height: 0.4vw;
-    background-color: white;
-    margin: 0.7vw 0;
+h2{
+    padding-top:1vw;
+    padding-bottom:1vw;
+    padding-left:1vw;
+    padding-right: 1vw;
 }
-.menu{
-    float:right;
-    display: inline;
-    font-size: 16px;
-    cursor: pointer;
-}
-
-.dropdown {
-    float: right;
-    position: relative;
-    display: inline-block;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 160px;
-    overflow: auto;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    right: 0;
-    top: 4.5vw;
-    z-index: 1;
-}
-
-.dropdown-content a {
-    color: black;
-    padding: 1.5vw 1.5vw;
-    text-decoration: none;
-    display: block;
-}
-
-.dropdown a:hover {background-color: #ddd}
-
-.show {display:block;}
-
 #image {
     width:100%;
 }
@@ -73,7 +38,6 @@ h1{
     top: 0;
     width: 100%; /* Full width */
     height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
 }
@@ -85,19 +49,20 @@ h1{
     height:auto;
     width:100%;
     height: auto;
-    position: relative;
+    position: absolute;
     top: 50%;
-    transform: translateY(-50%);
+    transform: translateY( -50%);
 
 }
 
 /* Add Animation */
-.modal-content {    
+/*.modal-content {    
     -webkit-animation-name: zoom;
     -webkit-animation-duration: 0.6s;
     animation-name: zoom;
     animation-duration: 0.6s;
 }
+
 
 @-webkit-keyframes zoom {
     from {-webkit-transform:scale(0)} 
@@ -108,6 +73,7 @@ h1{
     from {transform:scale(0)} 
     to {transform:scale(1)}
 }
+*/
 
 /* The Close Button */
 .close {
@@ -125,4 +91,15 @@ h1{
     color: #bbb;
     text-decoration: none;
     cursor: pointer;
+}
+
+.status{
+    position: absolute; 
+    right: 2vw;
+    border: none; /* Remove borders */
+    outline: none; /* Remove outline */
+    background-color: #990033; /* Set a background color */
+    padding: 0.9vw; /* Some padding */
+    width:2.5vw;
+    height:2.5vw;
 }
